<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/select_city_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_left_arrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/left_arrow"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/add_city"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/ed_search"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/search_edittext_selector"
            android:hint="@string/please_input_city_name"
            android:maxLength="6"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/img_clear"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/clear"
            android:visibility="gone"
            android:layout_alignTop="@+id/bt_search"
            android:layout_toLeftOf="@+id/bt_search"/>

        <com.wrecker.sampleweather.widget.SearchView
            android:id="@+id/bt_search"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ed_search"
            android:layout_alignRight="@+id/ed_search"
            android:layout_alignTop="@+id/ed_search"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp" />

        <ListView
            android:id="@+id/lv_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/white"
            android:visibility="gone"
            android:layout_below="@+id/ed_search">
        </ListView>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/hot_city"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:typeface="monospace"
        />

    <View
        android:id="@+id/horizontal_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/divider"></View>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:layout_marginBottom="120dp"
        android:stretchColumns="*"
        android:weightSum="8">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/show_city_name_height"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_hot_city0"
                style="@style/city_name_type"
                android:text="@string/hot_city0" />

            <TextView
                android:id="@+id/tv_hot_city1"
                style="@style/city_name_type"
                android:text="@string/hot_city1" />

            <TextView
                android:id="@+id/tv_hot_city2"
                style="@style/city_name_type"
                android:text="@string/hot_city2" />

            <TextView
                android:id="@+id/tv_hot_city3"
                style="@style/city_name_type"
                android:text="@string/hot_city3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/show_city_name_height"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_hot_city4"
                style="@style/city_name_type"
                android:text="@string/hot_city4" />

            <TextView
                android:id="@+id/tv_hot_city5"
                style="@style/city_name_type"
                android:text="@string/hot_city5" />

            <TextView
                android:id="@+id/tv_hot_city6"
                style="@style/city_name_type"
                android:text="@string/hot_city6" />

            <TextView
                android:id="@+id/tv_hot_city7"
                style="@style/city_name_type"
                android:text="@string/hot_city7" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/show_city_name_height"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_hot_city8"
                style="@style/city_name_type"
                android:text="@string/hot_city8" />

            <TextView
                android:id="@+id/tv_hot_city9"
                style="@style/city_name_type"
                android:text="@string/hot_city9" />

            <TextView
                android:id="@+id/tv_hot_city10"
                style="@style/city_name_type"
                android:text="@string/hot_city10" />

            <TextView
                android:id="@+id/tv_hot_city11"
                style="@style/city_name_type"
                android:text="@string/hot_city11" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/show_city_name_height"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_hot_city12"
                style="@style/city_name_type"
                android:text="@string/hot_city12" />

            <TextView
                android:id="@+id/tv_hot_city13"
                style="@style/city_name_type"
                android:text="@string/hot_city13" />

            <TextView
                android:id="@+id/tv_hot_city14"
                style="@style/city_name_type"
                android:text="@string/hot_city14" />

            <TextView
                android:id="@+id/tv_hot_city15"
                style="@style/city_name_type"
                android:text="@string/hot_city15" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/show_city_name_height"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_hot_city16"
                style="@style/city_name_type"
                android:text="@string/hot_city16" />

            <TextView
                android:id="@+id/tv_hot_city17"
                style="@style/city_name_type"
                android:text="@string/hot_city17" />

            <TextView
                android:id="@+id/tv_hot_city18"
                style="@style/city_name_type"
                android:text="@string/hot_city18" />

            <TextView
                android:id="@+id/tv_hot_city19"
                style="@style/city_name_type"
                android:text="@string/hot_city19" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/show_city_name_height"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_hot_city20"
                style="@style/city_name_type"
                android:text="@string/hot_city20" />

            <TextView
                android:id="@+id/tv_hot_city21"
                style="@style/city_name_type"
                android:text="@string/hot_city21" />

            <TextView
                android:id="@+id/tv_hot_city22"
                style="@style/city_name_type"
                android:text="@string/hot_city22" />

            <TextView
                android:id="@+id/tv_hot_city23"
                style="@style/city_name_type"
                android:text="@string/hot_city23" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/show_city_name_height"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_hot_city24"
                style="@style/city_name_type"
                android:text="@string/hot_city24" />

            <TextView
                android:id="@+id/tv_hot_city25"
                style="@style/city_name_type"
                android:text="@string/hot_city25" />

            <TextView
                android:id="@+id/tv_hot_city26"
                style="@style/city_name_type"
                android:text="@string/hot_city26" />

            <TextView
                android:id="@+id/tv_hot_city27"
                style="@style/city_name_type"
                android:text="@string/hot_city27" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="@dimen/show_city_name_height"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_hot_city28"
                style="@style/city_name_type"
                android:text="@string/hot_city28" />

            <TextView
                android:id="@+id/tv_hot_city29"
                style="@style/city_name_type"
                android:text="@string/hot_city29" />

            <TextView
                android:id="@+id/tv_hot_city30"
                style="@style/city_name_type"
                android:text="@string/hot_city30" />

            <TextView
                android:id="@+id/tv_hot_city31"
                style="@style/city_name_type"
                android:text="@string/hot_city31" />
        </TableRow>
    </TableLayout>
</LinearLayout>